--- a/Cliente/styles.css
+++ b/Cliente/styles.css
@@ -1,3 +1,5 @@
-body {
-    background-color:blueviolet;
+.header {
+    background-color: grey;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 35 px;
 }
