--- a/Client/src/styles.css
+++ b/Client/src/styles.css
@@ -1,6 +1,16 @@
 .header {
     font-family: 'Helvetica', serif;
     font-size: 65 px;
+    opacity: 0.8;
+    color: rgb(43, 46, 46);
+    transition: all 700ms;
+}
+
+.header:hover {
+    color: black;
+    opacity: 1;
+    transition: all 700ms;
+    font-size: 240%;
 }
 
 /* basic style definition */
@@ -59,10 +69,20 @@ body {
     overflow: hidden;
     border-radius: 50px;
     font-size: 20px;
-    
-      
+    opacity: 0.7;
+    transition: all 600ms;
+    }
+
+    .menu__link:hover {
+        border: 2px solid #81bece;
+        color: #0e1113;
+        opacity: 1;
+        text-decoration: solid;
+        background-color:cornflowerblue;
+        transition: all 600ms; 
     }
     
+
     /* Panels Style*/
     /* •••••••••••••••••••••••••••••••• */
     
@@ -83,7 +103,22 @@ body {
     box-sizing: border-box;
     background-color: #ECEFF1; }
     
-    
+    .panel2 {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        overflow: auto;
+        z-index: 999;
+        color: #000;
+        box-sizing: border-box;
+        background-color: #ECEFF1; }
+
     /* panel content (only for animation delay after open) */
     .panel__content {
     opacity: 0;
@@ -115,9 +150,16 @@ body {
     transition: all 800ms cubic-bezier(0.190, 1.000, 0.560, 1.000);
     transform: translate3d( 0, -100%, 0 ); }
     
+    .panel#slice2 {
+        background-color: #29b0ee;
+        transition: all 800ms cubic-bezier(0.190, 1.000, 0.560, 1.000);
+        transform: translate3d( 0, -100%, 0 ); }
+
     .panel#slice:target {
     transform: translate3d( 0, 0, 0 ); }
     
+    .panel#slice2:target {
+        transform: translate3d( 0, 0, 0 ); }
     
     .popup_formulario {
         display: inline-block;
