--- a/Client/src/styles.css
+++ b/Client/src/styles.css
@@ -36,7 +36,7 @@ body {
     text-align: center;
     margin: 0; }
     
-    
+
     a { 
     text-align: center;
     text-decoration: none;
@@ -82,7 +82,24 @@ body {
         transition: all 600ms; 
     }
     
-
+    /*menu link de subida de archivos*/
+    .menu__link__subida {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 45px;
+        color: #4e4f50; 
+        line-height: 30px; 
+        padding: 50 50px; 
+        opacity: 0.7;
+        transition: all 600ms;
+        }
+    
+        .menu__link__subida:hover {
+            color: #000000;
+            opacity: 1;
+            text-decoration: solid;
+            transition: all 600ms; 
+            font-size: 220%;
+        }
     /* Panels Style*/
     /* •••••••••••••••••••••••••••••••• */
     
@@ -103,21 +120,6 @@ body {
     box-sizing: border-box;
     background-color: #ECEFF1; }
     
-    .panel2 {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        overflow: auto;
-        z-index: 999;
-        color: #000;
-        box-sizing: border-box;
-        background-color: #ECEFF1; }
 
     /* panel content (only for animation delay after open) */
     .panel__content {
@@ -155,25 +157,37 @@ body {
         transition: all 800ms cubic-bezier(0.190, 1.000, 0.560, 1.000);
         transform: translate3d( 0, -100%, 0 ); }
 
+        .panel#slice3 {
+            background-color: #cacaca;
+            transition: all 800ms cubic-bezier(0.190, 1.000, 0.560, 1.000);
+            transform: translate3d( 0, -100%, 0 ); }
+
     .panel#slice:target {
     transform: translate3d( 0, 0, 0 ); }
     
     .panel#slice2:target {
         transform: translate3d( 0, 0, 0 ); }
     
-    .popup_formulario {
+    .formulario {
         display: inline-block;
-    text-decoration: none;
-    border: 2px solid #263238;
-    color: #263238; 
-    pointer-events: auto;
-    line-height: 40px; 
-    position: relative;
-    padding: 0 50px;
-    box-sizing: border-box;
-    margin: 0;
-    user-select: none;
-    overflow: hidden;
-    border-radius: 50px;
-    font-size: 20px;
+        text-decoration: none;
+        border: 2px solid #263238;
+        color: #263238; 
+        pointer-events: auto;
+        line-height: 40px; 
+        position: relative;
+        padding: 0 50px;
+        box-sizing: border-box;
+        margin: 0;
+        user-select: none;
+        overflow: hidden;
+        border-radius: 50px;
+        font-size: 20px;
+        
+    }
+
+    .formulario:start {
+        background-color: #29b0ee;
+    transition: all 800ms cubic-bezier(0.190, 1.000, 0.560, 1.000);
+    transform: translate3d( 0, -100%, 0 );
     }
