--- a/Client/src/styles.css
+++ b/Client/src/styles.css
@@ -1,13 +1,15 @@
-.header {
+
+.header#header_main {
     font-family: 'Helvetica', serif;
     font-size: 65 px;
     opacity: 0.8;
     color: rgb(43, 46, 46);
     transition: all 700ms;
+    position: relative;
 }
 
-.header:hover {
-    color: black;
+.header:hover#header_main {
+    color: rgb(29, 29, 29);
     opacity: 1;
     transition: all 700ms;
     font-size: 240%;
@@ -19,9 +21,17 @@
 body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    font-family: 'Roboto Slab', serif; }
+    font-family: 'Roboto Slab', serif; 
+    animation: animacion_con_transicion 1s ease-in;
+}
+
+@keyframes animacion_con_transicion {
+    from {opacity: 0.4;
+    background-color: rgb(170, 217, 233);}
+    to {opacity: 1}
     
-    
+}
+
     h1 {
     margin: 0;
     user-select: none;
@@ -48,44 +58,127 @@ body {
     .menu {
     position: fixed;
     width: 100vw;
+    height: 30vw;
     pointer-events: none;
-    margin-top: 500px;
+    margin-top: 800px;
     text-align: center;
-    z-index: 2; }
+    z-index: 1; 
+    }
     
     /* Menu link item */
     .menu__link {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    position: relative;
     display: inline-block;
     text-decoration: none;
-    border: 2px solid #263238;
-    color: #263238; 
+    border: 1px solid #263238;
+    color: #1e272c; 
     pointer-events: auto;
     line-height: 40px; 
-    position: relative;
-    padding: 0 50px; 
+    padding: 0 60px; 
     box-sizing: border-box;
-    margin: 0;
+    margin-inline: 3px;
     user-select: none;
     overflow: hidden;
     border-radius: 50px;
-    font-size: 20px;
-    opacity: 0.7;
+    font-size: 17px;
+    opacity: 0.8;
     transition: all 600ms;
     }
 
     .menu__link:hover {
-        border: 2px solid #81bece;
-        color: #0e1113;
-        opacity: 1;
+        border: 1px solid #81bece;
+        color: #000000;
         text-decoration: solid;
-        background-color:cornflowerblue;
-        transition: all 600ms; 
+        animation: colorful_border_background 1.2s ease-in infinite; 
+        font-weight: 500;
     }
     
+@keyframes colorful_border_background {
+    0% {
+        border-color: #81bece;
+        background-color:rgb(154, 183, 236);
+        opacity: 1;
+    }
+    30% {
+        border-color: #338dc9;
+        background-color:rgb(143, 173, 229);
+        opacity: 1;
+    }
+
+    50% {
+        border-color: #2a6085;
+        background-color:rgb(125, 167, 247);
+        opacity: 1;
+    }
+
+    80% {
+        border-color: #338dc9;
+        background-color:rgb(143, 173, 229);
+        opacity: 1;
+    }
+
+    100% {
+        border-color: #81bece;
+        background-color:rgb(154, 183, 236);
+        opacity: 1;
+    }
+}
+    
+
+    /* Menu link item */
+    .menu__link--active {
+    border: 2px solid #81bece;
+    color: #0e1113;
+    opacity: 1;
+    text-decoration: solid;
+    background-color:cornflowerblue;
+    transition: all 600ms;
+    animation: colorful_border 0.5s ease-in infinite; 
+    }
+    
+    /* Menu link item */
+    .menu__link--active:hover {
+    border: 2px solid #81bece;
+    color: #0e1113;
+    opacity: 1;
+    text-decoration: solid;
+    background-color:cornflowerblue;
+    transition: all 600ms;
+    animation: colorful_border 0.5s ease-in infinite; 
+    }
+    
+    /* Menu link item */
+    .menu__link--active:hover:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #81bece;
+    opacity: 0.5;
+    transition: all 600ms;
+    }
+    
+    /* Menu link item */
+    .menu__link:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #81bece;
+    opacity: 0.5;
+    transition: all 600ms;
+    }
+
+
     /*menu link de subida de archivos*/
     .menu__link__subida {
         font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-size: 45px;
+        font-size: 30px;
         color: #4e4f50; 
         line-height: 30px; 
         padding: 50 50px; 
@@ -98,27 +191,82 @@ body {
             opacity: 1;
             text-decoration: solid;
             transition: all 600ms; 
-            font-size: 220%;
+            font-size: 180%;
+        }
+
+        /*menu link de busqueda de un archivo*/
+    .menu__link__buscar__elem {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 30px;
+        color: #4e4f50; 
+        line-height: 30px; 
+        padding: 50 50px; 
+        opacity: 0.7;
+        transition: all 600ms;
+        }
+    
+        .menu__link__buscar__elem:hover {
+            color: #000000;
+            opacity: 1;
+            text-decoration: solid;
+            transition: all 600ms; 
+            font-size: 180%;
+        }
+
+            /*menu link para listar todas las descargas*/
+    .menu__link__listar {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 30px;
+        color: #4e4f50; 
+        line-height: 30px; 
+        padding: 50 50px; 
+        opacity: 0.7;
+        transition: all 600ms;
+        }
+    
+        .menu__link__listar:hover {
+            color: #000000;
+            opacity: 1;
+            text-decoration: solid;
+            transition: all 600ms; 
+            font-size: 180%;
+        }
+
+        .boton__volver {
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-size: 15px;
+            padding-top: 50px;
+            text-align: center;
+            color: rgb(122, 133, 133);
+            transition: all 600ms;
+        }
+
+        .boton__volver:hover {
+            color: #000000;
+            text-decoration: solid;
+            transition: all 600ms; 
         }
     /* Panels Style*/
     /* •••••••••••••••••••••••••••••••• */
     
     /* Common panel style */
     .panel {
-    display: flex;
+    display: grid;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    /*flex-direction: column;*/
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     overflow: auto;
-    z-index: 999;
+    z-index: 1;
     color: #000;
     box-sizing: border-box;
-    background-color: #ECEFF1; }
+    background-color: #ECEFF1; 
+    }
+    
     
 
     /* panel content (only for animation delay after open) */
@@ -140,9 +288,9 @@ body {
     /* •••••••••••••••••••••••••••••••• */
     
     .panel#home {
-    z-index: 1;
-    background: radial-gradient(ellipse at center, rgba(255,255,255,1) 0%,#68b3d1 100%); }
-    
+    z-index: 2;
+        background: radial-gradient(ellipse at center, rgba(255,255,255,1) 0%,#68b3d1 100%); 
+}
     
     /*  Specific panel "Slice" */
     /* •••••••••••••••••••••••••••••••• */
@@ -157,10 +305,10 @@ body {
         transition: all 800ms cubic-bezier(0.190, 1.000, 0.560, 1.000);
         transform: translate3d( 0, -100%, 0 ); }
 
-        .panel#slice3 {
-            background-color: #cacaca;
-            transition: all 800ms cubic-bezier(0.190, 1.000, 0.560, 1.000);
-            transform: translate3d( 0, -100%, 0 ); }
+    .panel#slice3 {
+        background-color: #cacaca;
+        transition: all 800ms cubic-bezier(0.190, 1.000, 0.560, 1.000);
+        transform: translate3d( 0, -100%, 0 ); }
 
     .panel#slice:target {
     transform: translate3d( 0, 0, 0 ); }
