--- a/Client/src/styles.css
+++ b/Client/src/styles.css
@@ -338,6 +338,18 @@ body {
         z-index: 1;
         background: radial-gradient(ellipse at center, rgba(255,255,255,1) 0%,#68b3d1 100%); }
     
+    .panel#panel_form_buscar {
+        transition: all 700ms;
+        opacity: 1;
+        z-index: 1;
+        background: radial-gradient(ellipse at center, rgba(255,255,255,1) 0%,#68b3d1 100%); }
+    
+    .panel#panel_form_subida {
+        transition: all 700ms;
+        opacity: 1;
+        z-index: 1;
+        background: radial-gradient(ellipse at center, rgba(255,255,255,1) 0%,#68b3d1 100%); }
+        
     
 
     
