--- a/Client/src/styles.css
+++ b/Client/src/styles.css
@@ -351,3 +351,61 @@ body {
         background: radial-gradient(ellipse at center, rgba(255,255,255,1) 0%,#68b3d1 100%); }
         
     
+        .columns{
+            float: left;
+            position: relative;
+            margin-right: 20px;
+        }
+
+        ul {
+            columns: 2;
+            -webkit-columns: 2;
+            -moz-columns: 2;
+          }
+
+          ul#horizontal-list {
+            min-width: 696px;
+            list-style: none;
+            padding-top: 8px;
+            padding-right: 20px;
+            }
+            ul#horizontal-list li {
+                display: inline;
+            }
+
+        .boton_descarga {
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-size: 18px;
+            text-align: center;
+            transition: all 600ms;
+        }
+
+        .boton_descarga:hover {
+            color: #000000;
+            text-decoration: solid;
+            background-color: cornflowerblue;
+            transition: all 600ms; 
+        }
+
+        .nombre_archivo_lista {
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-size: 25px;
+            text-align: center;
+            transition: all 600ms;
+            color:rgb(29, 29, 29)
+        }
+
+        .size_archivo_lista {
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-size: 14px;
+            text-align: center;
+            transition: all 600ms;
+            color:rgb(122, 133, 133)
+        }
+
+
+        .boton__listar {
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-size: 18px;
+            text-align: center;
+        }
